--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="20dp">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/back"
                 android:layout_width="0dp"
                 android:layout_marginStart="20dp"
                 android:layout_height="30dp"
