--- a/app/src/main/res/layout/activity_chef_verify_phone.xml
+++ b/app/src/main/res/layout/activity_chef_verify_phone.xml
@@ -44,9 +44,8 @@
                 android:textSize="35sp" />
         </LinearLayout>
 
-
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/otp"
+            android:id="@+id/code"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="350dp"
             android:layout_height="70dp"
@@ -58,9 +57,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/Otp"
-                android:inputType="number" />
+                android:inputType="phone" />
         </com.google.android.material.textfield.TextInputLayout>
-
         <Button
             android:id="@+id/verify"
             android:layout_width="200dp"
