--- a/app/src/main/res/layout/activity_chef_registration.xml
+++ b/app/src/main/res/layout/activity_chef_registration.xml
@@ -50,7 +50,7 @@
             android:layout_width="350dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+
             app:boxStrokeColor="@color/purple">
 
 
@@ -61,21 +61,41 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/ch_mobile_no"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <LinearLayout
+            android:id="@+id/phoneNumberLayout"
             android:layout_width="350dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            app:boxStrokeColor="@color/purple">
+            android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/Cpp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:boxStrokeColor="@color/purple"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/mobile"
-                android:inputType="number" />
-        </com.google.android.material.textfield.TextInputLayout>
+                app:ccp_defaultNameCode="KE"
+                android:layout_gravity="center"
+                app:ccp_showFlag="true"
+                app:ccp_showNameCode="true" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ch_mobile_no"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                app:boxStrokeColor="@color/purple">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/mobile"
+                    android:inputType="phone" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ch_email"
@@ -83,7 +103,6 @@
             android:layout_width="350dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             app:boxStrokeColor="@color/purple">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -99,7 +118,6 @@
             android:layout_width="350dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             app:boxStrokeColor="@color/purple"
             app:passwordToggleEnabled="true">
 
@@ -116,7 +134,6 @@
             android:layout_width="350dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             app:boxStrokeColor="@color/purple"
             app:passwordToggleEnabled="true">
 
