--- a/app/src/main/res/layout/activity_chef_send_otp.xml
+++ b/app/src/main/res/layout/activity_chef_send_otp.xml
@@ -46,7 +46,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/otp"
+            android:id="@+id/code"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="350dp"
             android:layout_height="70dp"
