--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -45,12 +45,11 @@
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/cu_firstname"
+            android:id="@+id/cu_fullName"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             app:boxStrokeColor="@color/purple">
 
 
@@ -61,28 +60,47 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/cu_mobile_no"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <LinearLayout
+            android:id="@+id/phoneNumberLayout"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            app:boxStrokeColor="@color/purple">
+            android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/Cpp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:hint="@string/mobile" />
-        </com.google.android.material.textfield.TextInputLayout>
+                app:ccp_defaultNameCode="KE"
+                android:layout_gravity="center"
+                app:ccp_showFlag="true"
+                app:ccp_showNameCode="true" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/cu_mobileNo"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                app:boxStrokeColor="@color/purple">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/mobile"
+                    android:inputType="phone" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/cu_email"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             app:boxStrokeColor="@color/purple">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -96,9 +114,8 @@
             android:id="@+id/cu_password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             app:boxStrokeColor="@color/purple"
             app:passwordToggleEnabled="true">
 
@@ -113,9 +130,8 @@
             android:id="@+id/cuc_password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
             app:boxStrokeColor="@color/purple"
             app:passwordToggleEnabled="true">
 
