--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#922878</color>
+    <color name="purple_dark">#6C0BA9</color>
+    <color name="Purple_light">#C576F6</color>
+    <color name="Pink">#ca3dca</color>
+    <color name="gray">#808080</color>
 </resources>
