--- a/app/src/main/res/layout/activity_chef_post_dish.xml
+++ b/app/src/main/res/layout/activity_chef_post_dish.xml
@@ -44,7 +44,7 @@
 
         <Spinner
             android:layout_width="162dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:padding="10dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:id="@+id/dishes"
@@ -129,6 +129,17 @@
         app:layout_constraintVertical_bias="0.30"
         app:layout_constraintHorizontal_bias="0.498"
         android:textSize="20sp"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/post" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
