--- a/app/src/main/res/layout/activity_customer_food_panel_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_customer_food_panel_bottom_navigation.xml
@@ -3,6 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CustomerFoodPanel_BottomNavigation">
+
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/customerBottomNavigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="?android:attr/windowBackground"
+            android:backgroundTint="@color/white"
+            app:itemIconTint="@color/menu_item_color"
+            app:itemTextColor="@color/menu_item_color"
+            app:menu="@menu/customer_bottom_navigation" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
