--- a/app/src/main/res/layout/progressbar_upload.xml
+++ b/app/src/main/res/layout/progressbar_upload.xml
@@ -14,7 +14,7 @@
         android:id="@+id/messageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/uploading"
+        android:text="uploading"
         android:layout_marginTop="8dp"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
