--- a/app/src/main/res/layout/fragment_customer_cart.xml
+++ b/app/src/main/res/layout/fragment_customer_cart.xml
@@ -1,6 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:id="@+id/container"
+    android:background="#FDFDFD">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclecart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+<!--        android:layout_above="@+id/TotalBtns"-->
+<!--        android:orientation="vertical" />-->
+
+    <LinearLayout
+        android:id="@+id/TotalBtns"
+        android:layout_width="match_parent"
+        android:layout_height="105dp"
+        android:orientation="vertical"
+        android:layout_below="@+id/recyclecart"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/GT"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:text="Grand Total:"
+            android:textColor="#000000"
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/RM"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/purple_btn"
+                android:gravity="center"
+                android:text="Remove All"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/PO"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/purple_btn"
+                android:gravity="center"
+                android:text="Place Order"
+                android:textColor="@color/white" />
+        </LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
