--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Reg_in_progress"
+        android:text="Loading"
         android:layout_marginTop="8dp" />
 
 </RelativeLayout>
