--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="Purple_light">#C576F6</color>
     <color name="Pink">#ca3dca</color>
     <color name="gray">#808080</color>
+    <color name="Red">#EB0D0D</color>
 </resources>
