--- a/app/src/main/res/layout/fragment_customer_cart.xml
+++ b/app/src/main/res/layout/fragment_customer_cart.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/container"
-    android:orientation="vertical"
-    android:background="#FDFDFD">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/header"
