--- a/app/src/main/res/layout/fragment_delivery_shiporder.xml
+++ b/app/src/main/res/layout/fragment_delivery_shiporder.xml
@@ -12,16 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="start"
-            android:paddingTop="30dp"
-            android:contentDescription="@string/back"
-            app:srcCompat="@drawable/baseline_keyboard_backspace_24" />
 
         <TextView
             android:id="@+id/textView5"
@@ -29,13 +21,21 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="30dp"
             android:padding="20dp"
             android:text="Ship Orders"
             android:textColor="@color/purple"
             android:textSize="25sp"
             android:textStyle="bold"/>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/noOrder1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="No Orders!"
+        android:gravity="center"
+        android:visibility="visible"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/delishiporder"
