--- a/app/src/main/res/layout/activity_chef_ordertobe_prepare_view.xml
+++ b/app/src/main/res/layout/activity_chef_ordertobe_prepare_view.xml
@@ -32,9 +32,9 @@
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_gravity="center"
         android:orientation="vertical"
-        android:visibility="invisible">
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
